tests/snapshots/snapshots/snapshots__snapshots__json_output__create_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&json)
---
{
  "created_at": "TIMESTAMP",
  "id": "ISSUE_ID",
  "issue_type": "feature",
  "priority": 1,
  "status": "open",
  "title": "New feature request",
  "updated_at": "TIMESTAMP"
}
