tests/snapshots/snapshots/snapshots__snapshots__json_output__ready_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&json)
---
[
  {
    "created_at": "TIMESTAMP",
    "dependency_count": 0,
    "dependent_count": 0,
    "id": "ISSUE_ID",
    "issue_type": "task",
    "priority": 2,
    "status": "open",
    "title": "Ready issue",
    "updated_at": "TIMESTAMP"
  }
]
