tests/snapshots/snapshots/snapshots__snapshots__json_output__ready_priority_ordering_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalized
---
[
  {
    "created_at": "TIMESTAMP",
    "created_by": "ACTOR",
    "id": "ISSUE_ID",
    "issue_type": "task",
    "priority": 1,
    "status": "open",
    "title": "Urgent ready task",
    "updated_at": "TIMESTAMP"
  },
  {
    "created_at": "TIMESTAMP",
    "created_by": "ACTOR",
    "id": "ISSUE_ID",
    "issue_type": "task",
    "priority": 3,
    "status": "open",
    "title": "Backlog ready task",
    "updated_at": "TIMESTAMP"
  },
  {
    "created_at": "TIMESTAMP",
    "created_by": "ACTOR",
    "id": "ISSUE_ID",
    "issue_type": "task",
    "priority": 2,
    "status": "open",
    "title": "Normal ready task",
    "updated_at": "TIMESTAMP"
  }
]
