tests/snapshots/snapshots/snapshots__snapshots__json_output__stats_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&json)
---
{
  "recent_activity": {
    "commit_count": 0,
    "hours_tracked": 24,
    "issues_closed": 0,
    "issues_created": 0,
    "issues_reopened": 0,
    "issues_updated": 0,
    "total_changes": 0
  },
  "summary": {
    "blocked_issues": 0,
    "closed_issues": 0,
    "deferred_issues": 0,
    "epics_eligible_for_closure": 0,
    "in_progress_issues": 0,
    "open_issues": 1,
    "pinned_issues": 0,
    "ready_issues": 1,
    "tombstone_issues": 0,
    "total_issues": 1
  }
}
