tests/snapshots/snapshots/snapshots__snapshots__json_output__update_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&json)
---
[
  {
    "id": "ISSUE_ID",
    "priority": 2,
    "status": "in_progress",
    "title": "Issue to update",
    "updated_at": "TIMESTAMP"
  }
]
